--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<style>
-    img[alt="www.000webhost.com"] {
-        display: none;
-    }
-</style>
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="public/images/logo.png">
-    <title> Trương Ngọc Sơn - Information </title>
+    <title> Phan Văn Hiếu - Information </title>
     <link id="favicon" rel="shortcut icon" href="" type="image/x-icon">
 
 
@@ -25,7 +19,6 @@
 </head>
 
 <body>
-    <audio autoplay> <source src="../sontung.mp3"> </audio>
     <div class="center">
         <div class="popup">
             <div class="title">
@@ -52,5 +45,5 @@ OK
 
     <script src="./public/js/CONFIG.js"></script>
     <script src="./public/js/app.js"></script>
-    <audio autoplay loop preload="auto"><source src="../nhacweb.mp3"> </audio>
+    
 </html>
